--- a/app/templates/InvalidRequest.html
+++ b/app/templates/InvalidRequest.html
@@ -35,6 +35,15 @@
             },
         }
     </script>
+    <script type="text/javascript">
+        const year = new Date().getFullYear();
+        document.addEventListener("DOMContentLoaded", function () {
+            const footer = document.querySelector("footer p");
+            if (footer) {
+                footer.innerHTML = `&copy; ${year} ShortyLinks. All rights reserved.`;
+            }
+        });
+    </script>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -96,6 +105,9 @@
         <div class="absolute bottom-[-10%] left-[-10%] w-[30%] h-[30%] bg-blue-300/10 blur-[80px] rounded-full"></div>
     </div>
     <footer class="py-6 px-10 text-center">
+    <p class="text-gray-500 dark:text-gray-600 text-sm">
+        &copy; ShortyLinks. All rights reserved.
+    </p>
     </footer>
 
 </body>
